# KTB-Deepdive

./: .gitignore  README.md
02/: README.md  example1.py  example2.py  example3.py  example4.py  example5.py  make_big_csv.py
03/: README.md
04/: README.md  downloadfile.py  example.py  example1.py
05/: README.md  example.py
06/: README.md  example.py
LLM_Project/chatbot/: .dockerignore  Dockerfile  README.md  docker-compose.ec2.yml  docker-compose.yml  pyproject.toml  requirements.txt  start.sh  version.md
LLM_Project/chatbot/basicdata/: eval.md  mini_gpt.py  plan.md  report.md  session_log_20260614.txt
LLM_Project/chatbot/docs/: instance_info.md  review.md  wireshark_report.md
LLM_Project/chatbot/ragdata/etc/: ai_machine_learning.md  korean_food.md
LLM_Project/chatbot/ragdata/gamejob/: game_business_terms.md  game_dev_terms.md  game_industry_jobs.md  korean_game_industry.md
LLM_Project/chatbot/ragdata/rpg/: rpg.md  rpg_arpg.md  rpg_jrpg.md  rpg_korean_games.md  rpg_lineage_series.md  rpg_mechanics.md  rpg_mmorpg.md  rpg_ncsoft_games.md  rpg_trpg.md
LLM_Project/chatbot/source/: evaluate.py  test.py
LLM_Project/chatbot/source/app/: app.py  auth.py  history.py  models.py  sessions.py  state.py  streaming.py  ui.py
LLM_Project/chatbot/source/app/routers/: chat.py  stream.py
LLM_Project/chatbot/source/app/static/: index.html  style.css
LLM_Project/chatbot/source/langchain_rag/: retriever.py
LLM_Project/chatbot/source/lc/: chain.py  claude_llm.py  llm.py  retriever.py  router.py
LLM_Project/chatbot/source/lg/: graph.py  models.py  nodes.py
LLM_Project/chatbot/source/llm/: claude_llm.py  gemini_llm.py  qwen_llm.py  sop_llm.py
LLM_Project/chatbot/source/model/: bpe.py  chat.py  dpo.py  main.py  model.py  rag.py  tokenizer.py  train_utils.py
LLM_Project/chatbot/source/model/sop_model/: chat.py  dpo.py  main.py  tokenizer.py
LLM_Project/chatbot/source/rag/: rag.py
(+3 files in other folders)
